src/logs/error/2024-05-18.log
2024-05-18 19:44:05 error: uncaughtException: Cannot find module 'ioredis'
Require stack:
- G:\Programming\projects\FullStack\MERN Blog\server\src\utils\redisClient.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\service\RedisService.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\routes\index.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\app.js
- G:\Programming\projects\FullStack\MERN Blog\server\index.js
Error: Cannot find module 'ioredis'
Require stack:
- G:\Programming\projects\FullStack\MERN Blog\server\src\utils\redisClient.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\service\RedisService.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\routes\index.js
- G:\Programming\projects\FullStack\MERN Blog\server\src\app.js
- G:\Programming\projects\FullStack\MERN Blog\server\index.js
    at Module._resolveFilename (node:internal/modules/cjs/loader:1143:15)
    at Module._load (node:internal/modules/cjs/loader:984:27)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\utils\redisClient.js:1:15)
    at Module._compile (node:internal/modules/cjs/loader:1369:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1427:10)
    at Module.load (node:internal/modules/cjs/loader:1206:32)
    at Module._load (node:internal/modules/cjs/loader:1022:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
2024-05-18 22:13:29 error: ReferenceError: proces is not defined,    at RedisService.getOrSet (G:\Programming\projects\FullStack\MERN Blog\server\src\service\RedisService.js:5:31),    at G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:34:35,    at G:\Programming\projects\FullStack\MERN Blog\server\src\middlewarers\catchAsyncErrors.js:7:19,    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:144:13),    at Route.dispatch (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\route.js:114:3),    at Layer.handle [as handle_request] (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\layer.js:95:5),    at G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:284:15,    at Function.process_params (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:346:12),    at next (G:\Programming\projects\FullStack\MERN Blog\server\node_modules\express\lib\router\index.js:280:10)
2024-05-18 22:45:40 error: uncaughtException: Unexpected identifier 'pattern'
G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:98
    pattern: "articles:page=*",
    ^^^^^^^

SyntaxError: Unexpected identifier 'pattern'
    at internalCompileFunction (node:internal/vm:128:18)
    at wrapSafe (node:internal/modules/cjs/loader:1280:20)
    at Module._compile (node:internal/modules/cjs/loader:1332:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1427:10)
    at Module.load (node:internal/modules/cjs/loader:1206:32)
    at Module._load (node:internal/modules/cjs/loader:1022:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js:20:5)
    at Module._compile (node:internal/modules/cjs/loader:1369:14)
2024-05-18 22:45:47 error: uncaughtException: Unexpected identifier 'pattern'
G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:98
    pattern: "articles:page=*",
    ^^^^^^^

SyntaxError: Unexpected identifier 'pattern'
    at internalCompileFunction (node:internal/vm:128:18)
    at wrapSafe (node:internal/modules/cjs/loader:1280:20)
    at Module._compile (node:internal/modules/cjs/loader:1332:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1427:10)
    at Module.load (node:internal/modules/cjs/loader:1206:32)
    at Module._load (node:internal/modules/cjs/loader:1022:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js:20:5)
    at Module._compile (node:internal/modules/cjs/loader:1369:14)
2024-05-18 22:46:23 error: uncaughtException: Unexpected identifier 'pattern'
G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:98
    pattern: "articles:page=*",
    ^^^^^^^

SyntaxError: Unexpected identifier 'pattern'
    at internalCompileFunction (node:internal/vm:128:18)
    at wrapSafe (node:internal/modules/cjs/loader:1280:20)
    at Module._compile (node:internal/modules/cjs/loader:1332:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1427:10)
    at Module.load (node:internal/modules/cjs/loader:1206:32)
    at Module._load (node:internal/modules/cjs/loader:1022:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js:20:5)
    at Module._compile (node:internal/modules/cjs/loader:1369:14)
2024-05-18 22:46:38 error: uncaughtException: Unexpected identifier 'pattern'
G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:99
    pattern: "articles:page=*",
    ^^^^^^^

SyntaxError: Unexpected identifier 'pattern'
    at internalCompileFunction (node:internal/vm:128:18)
    at wrapSafe (node:internal/modules/cjs/loader:1280:20)
    at Module._compile (node:internal/modules/cjs/loader:1332:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1427:10)
    at Module.load (node:internal/modules/cjs/loader:1206:32)
    at Module._load (node:internal/modules/cjs/loader:1022:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js:20:5)
    at Module._compile (node:internal/modules/cjs/loader:1369:14)
2024-05-18 22:59:02 error: uncaughtException: Unexpected identifier 'pattern'
G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:99
    pattern: "articles:page=*",
    ^^^^^^^

SyntaxError: Unexpected identifier 'pattern'
    at internalCompileFunction (node:internal/vm:128:18)
    at wrapSafe (node:internal/modules/cjs/loader:1280:20)
    at Module._compile (node:internal/modules/cjs/loader:1332:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1427:10)
    at Module.load (node:internal/modules/cjs/loader:1206:32)
    at Module._load (node:internal/modules/cjs/loader:1022:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js:20:5)
    at Module._compile (node:internal/modules/cjs/loader:1369:14)
2024-05-18 23:09:50 error: uncaughtException: Unexpected identifier 'pattern'
G:\Programming\projects\FullStack\MERN Blog\server\src\controllers\article.js:99
    pattern: "articles:page=*",
    ^^^^^^^

SyntaxError: Unexpected identifier 'pattern'
    at internalCompileFunction (node:internal/vm:128:18)
    at wrapSafe (node:internal/modules/cjs/loader:1280:20)
    at Module._compile (node:internal/modules/cjs/loader:1332:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1427:10)
    at Module.load (node:internal/modules/cjs/loader:1206:32)
    at Module._load (node:internal/modules/cjs/loader:1022:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (G:\Programming\projects\FullStack\MERN Blog\server\src\routes\article.js:20:5)
    at Module._compile (node:internal/modules/cjs/loader:1369:14)
